--- a/frametest/public/index.html
+++ b/frametest/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Framework</title>
+    <title>Framebook</title>
   </head>
   <body>
     <div id="root"></div>
